--- a/index.html
+++ b/index.html
@@ -3,8 +3,17 @@
   <head>
     <title>Heybye44 Lab</title>
   </head>
-  <body>
-    <h1>Heybye44 Labs</h1>
-    <h2>Content Coming Soon!</h2>
+  <body align = "center">
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+    
+      ga('create', 'UA-64253562-1', 'auto');
+      ga('send', 'pageview');
+    </script>
+    <h1>Heybye44's Labs</h1>
+    <h2>Cool Stuff Coming Soon!</h2>
   <body>
 </html>
