--- a/index.html
+++ b/index.html
@@ -13,7 +13,33 @@
       ga('create', 'UA-64253562-1', 'auto');
       ga('send', 'pageview');
     </script>
-    <h1>Heybye44's Labs</h1>
-    <h2>Cool Stuff Coming Soon!</h2>
+    <style>
+      body{
+        background-color: #A1D8E5;
+        color: #dfe3e4;
+      }
+      
+      div{
+        background-color: rgba(0.1, 0.2, 0.3, 0.7);
+        -webkit-box-shadow: 0px 0px 25px 6px rgba(0,0,0,0.58);
+        -moz-box-shadow: 0px 0px 25px 6px rgba(0,0,0,0.58);
+        box-shadow: 0px 0px 25px 6px rgba(0,0,0,0.58);
+        top: 50%;
+        bottom: 50%;
+        left: 50%;
+        right: 50%;
+      }
+      div h1{
+        font-size: 5em;
+      }
+      
+      div h2{
+        font-size: 3em;
+      }
+    </style>
+    <div>
+      <h1>Heybye44's Labs</h1>
+      <h2>Cool Stuff Coming Soon!</h2>
+    </div>
   <body>
 </html>
