--- a/index.html
+++ b/index.html
@@ -17,17 +17,16 @@
       body{
         background-color: #A1D8E5;
         color: #dfe3e4;
+        padding: 40%;
+        font-family: arial;
       }
       
       div{
-        background-color: rgba(0.1, 0.2, 0.3, 0.7);
+        background-color: rgba(0.1 0.2 0.3 0.7);
         -webkit-box-shadow: 0px 0px 25px 6px rgba(0,0,0,0.58);
         -moz-box-shadow: 0px 0px 25px 6px rgba(0,0,0,0.58);
         box-shadow: 0px 0px 25px 6px rgba(0,0,0,0.58);
-        top: 50%;
-        bottom: 50%;
-        left: 50%;
-        right: 50%;
+        margin: 0.5em;
       }
       div h1{
         font-size: 5em;
@@ -37,7 +36,7 @@
         font-size: 3em;
       }
     </style>
-    <div>
+    <div align = "center">
       <h1>Heybye44's Labs</h1>
       <h2>Cool Stuff Coming Soon!</h2>
     </div>
