--- a/index.html
+++ b/index.html
@@ -16,17 +16,18 @@
     <style>
       body{
         background-color: #A1D8E5;
+        background-url: http://api.thumbr.it/whitenoise-361x370.png?background=4ea6caff&noise=3965f7&density=93&opacity=16 
         color: #dfe3e4;
-        padding: 40%;
+        padding: 20%;
         font-family: arial;
       }
       
       div{
-        background-color: rgba(0.1 0.2 0.3 0.7);
+        background-color: rgba( 0.7);
         -webkit-box-shadow: 0px 0px 25px 6px rgba(0,0,0,0.58);
         -moz-box-shadow: 0px 0px 25px 6px rgba(0,0,0,0.58);
         box-shadow: 0px 0px 25px 6px rgba(0,0,0,0.58);
-        margin: 0.5em;
+        margin: 1em;
       }
       div h1{
         font-size: 5em;
