--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <style>
       body{
         background-color: #A1D8E5;
-        background-url: http://api.thumbr.it/whitenoise-361x370.png?background=4ea6caff&noise=3965f7&density=93&opacity=16 
+        background-url: "http://api.thumbr.it/whitenoise-361x370.png?background=4ea6caff&noise=3965f7&density=93&opacity=16" 
         color: #dfe3e4;
         padding: 20%;
         font-family: arial;
