--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       }
       
       div{
-        background-color: rgba( 0.7);
+        background-color: RGBA(0.1 0.2 0.3 0.7);
         -webkit-box-shadow: 0px 0px 25px 6px rgba(0,0,0,0.58);
         -moz-box-shadow: 0px 0px 25px 6px rgba(0,0,0,0.58);
         box-shadow: 0px 0px 25px 6px rgba(0,0,0,0.58);
