--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
     </script>
     <style>
       body{
-        background-color: #A1D8E5;
         background-image: url("http://api.thumbr.it/whitenoise-361x370.png?background=4ea6caff&noise=3965f7&density=93&opacity=16") 
         color: #dfe3e4;
         padding: 20%;
@@ -23,7 +22,7 @@
       }
       
       div{
-        background-color: RGBA(0.1 0.2 0.3 0.7);
+        background-color: #B6BFC1;
         -webkit-box-shadow: 0px 0px 25px 6px rgba(0,0,0,0.58);
         -moz-box-shadow: 0px 0px 25px 6px rgba(0,0,0,0.58);
         box-shadow: 0px 0px 25px 6px rgba(0,0,0,0.58);
