--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
 	  <div id="social-bar">
 		<ul>
 			<li onClick="window.open('http://mrcoolant.tumblr.com')" class="btn">Blog</li>
-			<li onClick="window.open('http://https://www.youtube.com/channel/UC5dSjY1j0jiSkrMkgjAmhdQ')" class="btn">Youtube</li>
+			<li onClick="window.open('https://www.youtube.com/channel/UC5dSjY1j0jiSkrMkgjAmhdQ')" class="btn">Youtube</li>
 			<li onClick="window.open('http://github.com/Heybye44')" class="btn">Github</li>
-			<li onClick="window.open('http://http://gamejolt.com/profile/abstractcheesecake/690443')" class="btn">GameJolt</li>
+			<li onClick="window.open('http://gamejolt.com/profile/abstractcheesecake/690443')" class="btn">GameJolt</li>
 		</ul>
 	  </div>
     </div>
