--- a/sites/energy/typesofenergy/end.html
+++ b/sites/energy/typesofenergy/end.html
@@ -32,7 +32,7 @@
 		<h1>Conclusion</h1>
 		<h2>Kinetic Energy and Potential Energy are related.</h2>
 		<p>
-			Kinetic energy is the energy of motion and potential energy is energy that is stored. Energy can only be convert to other types of energy. It can never be created or destroyed. In most cases, the sum of potential and kinetic energy (mechanical energy) stay the same, but the separate amount of potential and kinetic energy fluctuates. This happens, because energy is being converted from one form to another.
+			Kinetic energy is the energy of motion and potential energy is energy that is stored. Energy can only be converted to other types of energy. It can never be created or destroyed. In most cases, the sum of potential and kinetic energy (mechanical energy) stays the same, but the separate amount of potential and kinetic energy usually fluctuates. This happens because energy is being converted from one form to another.
 		</p>
     </div>
 	<div align = "center" class="card animated wow fadeInLeft">
