Add a new card: Latest Render

--- a/index.html
+++ b/index.html
@@ -26,25 +26,28 @@
 		padding-top: 10%;
 
       }
-	  
+
 	  	.btn:hover{
 			background-color: orange;
-			
+
 		}
     </style>
     <div  class="card animated wow fadeInLeft" align = "center">
  <h1>Chris D.</h1>
       <h2>More Cool Stuff Coming Soon!</h2>
-	  <div id="social-bar">
-		<ul>
-			<li onClick="window.open('http://mrcoolant.tumblr.com')" class="btn">Blog</li>
-			<li onClick="window.open('https://www.youtube.com/channel/UC5dSjY1j0jiSkrMkgjAmhdQ')" class="btn">Youtube</li>
-			<li onClick="window.open('http://github.com/Heybye44')" class="btn">Github</li>
-			<li onClick="window.open('http://gamejolt.com/profile/abstractcheesecake/690443')" class="btn">GameJolt</li>
-		</ul>
-	  </div>
+  	  <div id="social-bar">
+  		<ul>
+  			<li onClick="window.open('http://mrcoolant.tumblr.com')" class="btn">Blog</li>
+  			<li onClick="window.open('https://www.youtube.com/channel/UC5dSjY1j0jiSkrMkgjAmhdQ')" class="btn">Youtube</li>
+  			<li onClick="window.open('http://github.com/Heybye44')" class="btn">Github</li>
+  			<li onClick="window.open('http://gamejolt.com/profile/abstractcheesecake/690443')" class="btn">GameJolt</li>
+  		</ul>
+  	  </div>
     </div>
-	
 	</div>
+  <div class="card animated wow fadeInRight" align = "center">
+    <h1>Latest Render</h1>
+    <img src="img/latestrender.png"></img>
+  </div>
   </body>
 </html>
