Added some clearification

--- a/index.html
+++ b/index.html
@@ -48,9 +48,11 @@
   <div class="card animated wow fadeInRight" align = "center">
     <h1>Latest Renders</h1>
     <img src="img/latestrender.png"></img>
-    <p>
-      In this era, modern technology has given people the ability to communicate, collaborate, and solve problems together. Instead, we fight, argue, and don&#39;t use our new abilities for the greater good. Our attitude towards each other needs to change. This symbol represents us working as one, the whole world functioning as a whole and everyone prospering in joy, and serenity. Together, we can get over our differences and bring about the true final solution to prejudice, discrimination, self-insecurity, and oppression.  Together, we have the power to bring peace, love, and unity to our futures and the futures of all who have to come.
-    </p>
+			<p>
+				<strong>Caption: </strong> In this era, modern technology has given people the ability to communicate, collaborate, and solve problems together. Instead, we fight, argue, and don&#39;t use our new abilities for the greater good. Our attitude towards
+				each other needs to change. This symbol represents us working as one, the whole world functioning as a whole and everyone prospering in joy, and serenity. Together, we can get over our differences and bring about the true final solution to prejudice,
+				discrimination, self-insecurity, and oppression. Together, we have the power to bring peace, love, and unity to our futures and the futures of all who have to come.
+			</p>
     <br/>
     <img src="img/latestrender2.png"></img>
   </div>
